New landing page

--- a/index.html
+++ b/index.html
@@ -1,79 +1,62 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="description" content="A beautiful music player which plays music" />
+	<meta name="author" content="Strings Inc" />
+	<!--To add Google Webmaster Tools -->
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Strings : A beautiful music player which plays music." />
+	<title>Strings - A beautiful music player which plays music. </title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<link rel="stylesheet" href="stylesheets/normalize.min.css">
+	<link rel="icon" href="/favicon.png" type="image/png" />
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"><!-- for IE -->
+	
+	<link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500' rel='stylesheet' type='text/css'>
 
-    <title>Strings</title>
-  </head>
+	<!-- TO DO: Add Google Analytics-->
+</head>
 
-  <body>
+<body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Ashu/Strings">View on GitHub</a>
+<div id="main">
+	<header id="header">
+		<h1 id="logo">
+			<img src="images/logo.png" alt="Strings Logo"/>
+			<p id="title">Strings</p>
+		</h1>
+		<div id="tagline">A beautiful music player which plays music.</div>
+		<p id="comingSoon">Coming to <span>i</span>OS in 2014.</p>
+	</header>
 
-          <h1 id="project_title">Strings</h1>
-          <h2 id="project_tagline">A beautiful music player which plays music.</h2>
+	<div id="betaSignup">
+		<script type="text/javascript">var submitted=false;</script>
+		<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" 
+		onload="if(submitted){document.getElementById('successMessage').style.display='block';}" frameborder="0"></iframe>
+		<form action="https://docs.google.com/forms/d/1-11zgbjmtbujyzGXxdAR4QqssBmm_2TUPhOOdgbGiPQ/formResponse" method="post" id="signup" target="hidden_iframe" onsubmit="submitted=true;">
+			<input type="email" class="textInput" id="email" name="entry.1064473216" placeholder="Your e-mail address" autocomplete="off" />
+			<button class="btn" type="submit">Request an invite</button>
+		</form>
+		<div id="successMessage" style="display:none">
+			You've been added to the list.
+		</div>
+	</div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Ashu/Strings/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Ashu/Strings/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+	<div id="socialmedia">
+		<a id="facebook" href="https://www.facebook.com/StringsApp" target="_blank">
+			<img src="images/facebook.svg" alt="Facebook">
+		</a>	
+			
+		<a id="twitter" href="http://www.twitter.com/strings_app" target="_blank">
+			<img src="images/twitter.svg" alt="Twitter">
+		</a>				
+	
+	</div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Strings maintained by <a href="https://github.com/Ashu">Ashu</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+	<footer id="footer">
+		<span class="copyright">@2014 Strings</span>
+	</footer>
+</div>	
+</body>
 </html>
