--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	</div>
 
 	<footer id="footer">
-		<span class="copyright">@2014 Strings</span>
+		<span class="copyright">©2014 Strings</span>
 	</footer>
 </div>	
 </body>
